--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/brehar/facial-recognition-music#readme",
   "dependencies": {
+    "bower": "^1.7.9",
     "express": "^4.13.4",
     "morgan": "^1.7.0"
   }
